# matshare

./: .gitignore  CMakeLists.txt  Contents.m  INSTALL.m  LICENSE  OPTIONS.m  README.md  ap.m  getmem.m  mexmake.m  mextest.m  mshtestsuite.m  proftst.sh  tc.m
+matshare/: Contents.m  clean.m  clear.m  clearshm.m  compatobject.m  config.m  copy.m  debug.m  detach.m  fetch.m  getcols.m  lock.m  mshreset.m  object.m  pshare.m  reset.m  share.m  status.m  unlock.m
+matshare/+examples/: anisurf.m  parfortest.m  simpledemo.m  speeddemo.m
+matshare/private/: .gitignore  createobject.m
LICENSE/: LICENSE  license (sharedmatrix).txt
cmake/: FindMatlab.cmake
examples/: mshspeeddemo.m
matshare_source/: CMakeLists.txt  ap.m  mshtestsuite.m
matshare_source/cmake/: FindMatlab.cmake
matshare_source/scripts/: memtst.sh  unfold.m
matshare_source/src/: mshinit.c  mshutils.c  mshvariables.c
matshare_source/src/headers/: mshexterntypes.h  mshsegmentnode.h  mshutils.h  mshvariablenode.h
matshare_source/tests/parallel/: testparessential.m  testparoverwrite.m  testparvarresult.m
matshare_source/tests/params/verify/: verifyparams.m
matshare_source/tests/single/: testrandfunccalls.m  testresultverify.m
matshare_source/tests/vargen/: generatevariable.m  variablefromtemplate.m
scripts/: collectinfo.c  getcommon.m  memtst.sh  mfilefolder.m  mkdirifnotexist.m  mshpoolstartup.m  proftst.sh  unfold.m
source/: .gitignore  CMakeLists.txt  INSTALL.m  OPTIONS.m  mexmake.m
source/+matshare/+scripts/: mkdirifnotexist.m
source/+matshare/+tests/: testsuite.m
source/+matshare/+tests/+common/: randfuncworker.m
source/+matshare/+tests/+common/+params/: randfunc.m  verify.m  verifylong.m
source/+matshare/+tests/+common/+vargen/: variablefromtemplate.m  variablegenerator.m
source/+matshare/+tests/+parallel/: essential.m  lock.m  overwrite.m  randfunccalls.m  resultverify.m  varoverflow.m  varresult.m
source/+matshare/+tests/+single/: binaryvaroptester.m  findvar.m  randfunccalls.m  resultverify.m  subsover.m  testbinaryvarop.m  testrsa.m  testsubs.m  testvarops.m  unaryvaroptester.m  varops.m
source/+matshare/+tests/+single/private/: testsubs.m  testunaryvarop.m
source/+matshare/+utils/: gettoolboxes.m  poolstartup.m
source/cmake/: FindMatlabD.cmake
source/scripts/: memtst.sh  proftst.sh  testperfint.m
source/src/: CMakeLists.txt  matshare_.c  mlerrorutils.c  mshinit.c  mshlockfree.c  mshsegments.c  mshtable.c  mshutils.c  mshvariables.c  mshvarops.c
source/src/headers/: matshare_.h  mlerrorutils.h  mshbasictypes.h  mshexterntypes.h  mshheader.h  mshinit.h  mshlockfree.h  mshsegmentnode.h  mshsegments.h  mshtable.h  mshtypes.h  mshutils.h  mshvariablenode.h  mshvariables.h  mshvarops.h
source/src/headers/opaque/: mshexterntypes.c  mshheader.c  mshsegmentnode.c  mshtable.c  mshvariablenode.c
source/tests/: adddouble.c  adddoublep.c  intdefcheck.c  printmxarray.c  saturatedadd.c  setdims.c  testans.m  testbench.c  testbench2.c  testmlc.c
src/: CMakeLists.txt  MatShare.cpp  SharedMemory.cpp  ezq.c  init.c  matlabutils.c  matshare.c  matshare_.c  matshare_.cpp  mlerrorutils.c  mshinit.c  mshlists.c  mshlockfree.c  mshsegments.c  mshutils.c  mshvariables.c  shmem.c  utils.c
src/entry/: MatShareAI.m  MatShareMI.m
src/extlib/mman-win32/: mman.c  mman.h
src/headers/: MatShare.hpp  SharedMemStack.hpp  SharedMemory.hpp  externtypes.h  ezq.h  init.h  matlabutils.h  matshare.h  matshare_.h  matshare_.hpp  mlerrorutils.h  msh_types.h  mshbasictypes.h  mshexterntypes.h  mshheader.h  mshinit.h  mshlists.h  mshlockfree.h  mshsegmentnode.h  mshsegments.h  mshtypes.h  mshutils.h  mshvariablenode.h  mshvariables.h  shmem.h  utils.h
src/headers/opaque/: mshexterntypes.c  mshheader.c  mshsegmentnode.c  mshtable.c  mshvariablenode.c
tests/: align_test2.c  backwardchk.c  buildtestbench.m  c_align_test.c  checkinit.m  collectmemhead.m  compstruct.m  crashscript.m  failuresparse.mat  forwardchk.c  matlabpool.m  memhead.c  nullfcn.c  printmxarray.c  randVarGen.m  randvargen.m  randvargen2.m  randvars.m  test.m  testans.m  testbench.c  testclass2.m  testclassperf.m  testdouble.m  testentry.m  testentryscript.m  testmulti.m  testnums.m  testnumsfcns.m  testnumsfcnsmex.m  testnumsnorm.m  testnumsraw.m  testnumsstatic.m  testobjrandfuncworker.m  testparessential.m  testparrandfunccalls.m  testparresultverify.m  testparvarresult.m  testrandfunccalls.m  testrandfuncworker.m  (+11 more)
tests/@tcobj/: func.m  tcobj.m
tests/@testclass/: func.m  func2.m  testclass.m
tests/memhead/32bit/: collectmemhead32.m  emumemhead32.m  memhead32.c
tests/memhead/64bit/: collectmemhead.m  emumemhead.m  memhead.c
tests/object/: testobjparessential.m  testobjparlock.m  testobjparrandfunccalls.m  testobjparresultverify.m  testobjparvarresult.m
tests/parallel/: testparessential.m  testparlock.m  testparoverwrite.m  testparrandfunccalls.m  testparresultverify.m  testparvaroverflow.m  testparvarresult.m  testrandgen.m
tests/params/randfunc/: randfuncparams.m
tests/params/verify/: verifyparams.m
tests/precompiled/: generaterandfuncres.m  generateres.m  generateverifyres.m  testprecomprandfunc.m  testprecompverify.m  testprecompwkr.m
tests/single/: testresultverify.m
tests/vargen/: BasicClass.m  randuint64shifted.m  variablefromtemplate.m  variablegenerator.m
