CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(matshare)
SET(CMAKE_CXX_STANDARD 11)
MESSAGE(STATUS "Building with configuration CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")


IF("${CMAKE_BUILD_TYPE}" STREQUAL "NO_MEX")

	SET(OUT_NAME mexemulate)

	if(MSVC OR (DEFINED USE_MSVC))
		MESSAGE(STATUS "Building with MSVC")
		ADD_DEFINITIONS(-DNO_MEX)
	else(MSVC OR (DEFINED USE_MSVC))
		MESSAGE(STATUS "Building with MinGW")
		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -DNO_MEX")
	ENDIF(MSVC OR (DEFINED USE_MSVC))

	SET(SOURCE_FILES
			src/matshare_.c src/headers/matshare_.h
			)

	ADD_EXECUTABLE(${OUT_NAME} ${SOURCE_FILES})

ELSE("${CMAKE_BUILD_TYPE}" STREQUAL "NO_MEX")

	SET(INSTALL_OUTPUT_PATH "bin")
	SET(CMAKE_CL_64 TRUE)
	#set(CMAKE_VERBOSE_MAKEFILE ON)
	SET(MATLAB_ROOT "C:\\Program Files\\MATLAB\\R2017b")
	SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
	SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake) # add FindMatlab module

	ADD_DEFINITIONS(-DMATLAB_MEX_FILE) #define matlab macros

	FIND_PACKAGE(Matlab REQUIRED)

	IF(MATLAB_FOUND)
		MESSAGE(STATUS "MATLAB Found, MATLAB MEX will be compiled.")
		ADD_SUBDIRECTORY(src)
	ELSE(MATLAB_FOUND)
		MESSAGE("MATLAB not found... nothing will be built.")
	ENDIF(MATLAB_FOUND)

ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "NO_MEX")