CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(matshare)
SET(CMAKE_C_STANDARD 90)
MESSAGE(STATUS "Building with configuration CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")

IF("${DEBUG_SWITCH}" STREQUAL "DEBUG_UNIX")
	ADD_DEFINITIONS(-DDEBUG_UNIX)
	MESSAGE(STATUS "Debugging UNIX")
ELSE("${DEBUG_SWITCH}" STREQUAL "DEBUG_UNIX")
	IF("${DEBUG_SWITCH}" STREQUAL "DEBUG_UNIX_ON_WINDOWS")
		ADD_DEFINITIONS(-DDEBUG_UNIX_ON_WINDOWS)
		SET(UX TRUE)
		MESSAGE(STATUS "Debugging UNIX on WINDOWS")
	ELSE("${DEBUG_SWITCH}" STREQUAL "DEBUG_UNIX_ON_WINDOWS")
		ADD_DEFINITIONS(-DDEBUG_WINDOWS)
		MESSAGE(STATUS "Debugging WINDOWS")
	ENDIF("${DEBUG_SWITCH}" STREQUAL "DEBUG_UNIX_ON_WINDOWS")
ENDIF("${DEBUG_SWITCH}" STREQUAL "DEBUG_UNIX")

IF("${CMAKE_BUILD_TYPE}" STREQUAL "NO_MEX")

	SET(OUT_NAME mexemulate)

	IF(MSVC OR (DEFINED USE_MSVC))
		MESSAGE(STATUS "Building with MSVC")
		ADD_DEFINITIONS(-DNO_MEX)
	ELSE(MSVC OR (DEFINED USE_MSVC))
		MESSAGE(STATUS "Building with MinGW")
		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -DNO_MEX")
	ENDIF(MSVC OR (DEFINED USE_MSVC))

	SET(SOURCE_FILES
			src/matshare_.c src/headers/matshare_.h
		   src/matlabutils.c src/headers/matlabutils.h src/init.c src/headers/init.h src/headers/mshtypes.h src/headers/externtypes.h src/mshutils.c src/headers/mshutils.h)

	ADD_EXECUTABLE(${OUT_NAME} ${SOURCE_FILES})

ELSE("${CMAKE_BUILD_TYPE}" STREQUAL "NO_MEX")

	SET(INSTALL_OUTPUT_PATH "bin")
	SET(CMAKE_CL_64 TRUE)
	#set(CMAKE_VERBOSE_MAKEFILE ON)
	#SET(MATLAB_ROOT "C:\\Program Files\\MATLAB\\R2017b")
	SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
	SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake) # add FindMatlab module

	ADD_DEFINITIONS(-DMSH_AUTO_INIT)
	ADD_DEFINITIONS(-DMSH_THREAD_SAFE)
	ADD_DEFINITIONS(-DMATLAB_MEX_FILE) #define matlab macros

	FIND_PACKAGE(Matlab REQUIRED)

	IF(MATLAB_FOUND)
		MESSAGE(STATUS "MATLAB Found, MATLAB MEX will be compiled.")
		ADD_SUBDIRECTORY(src)
	ELSE(MATLAB_FOUND)
		MESSAGE("MATLAB not found... nothing will be built.")
	ENDIF(MATLAB_FOUND)

ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "NO_MEX")