CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(matshare C)
SET(CMAKE_C_STANDARD 90)

MESSAGE(STATUS "Building with configuration CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")

IF("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG_UNIX")
	ADD_DEFINITIONS(-DDEBUG_UNIX)
	#	SET(MATLAB_ROOT "/usr/local/MATLAB/R2017b")
	MESSAGE(STATUS "Debugging UNIX")
ELSE("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG_UNIX")
	#	SET(MATLAB_ROOT "C:/Program Files/MATLAB/R2017b")
	#	SET(MATLAB_MEX_LIBRARY "C:/Program Files/MATLAB/R2017b/extern/lib/win64/microsoft/libmex.lib")
	#	SET(MATLAB_MX_LIBRARY "C:/Program Files/MATLAB/R2017b/extern/lib/win64/microsoft/libmx.lib")
	IF("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG_UNIX_ON_WINDOWS")
		ADD_DEFINITIONS(-DDEBUG_UNIX_ON_WINDOWS)
		SET(UX TRUE)
		MESSAGE(STATUS "Debugging UNIX on WINDOWS")
	ELSE("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG_UNIX_ON_WINDOWS")
		ADD_DEFINITIONS(-DDEBUG_WINDOWS)
		MESSAGE(STATUS "Debugging WINDOWS")
	ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG_UNIX_ON_WINDOWS")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG_UNIX")

SET(INSTALL_OUTPUT_PATH "../+matshare/private")
SET(CMAKE_CL_64 TRUE)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake) # add FindMatlab module

ADD_DEFINITIONS(-DMATLAB_MEX_FILE) #define matlab macros
ADD_DEFINITIONS(-DMSH_AVX_SUPPORT)
ADD_DEFINITIONS(-DMSH_BITNESS=64)
ADD_DEFINITIONS(-DMSH_DEFAULT_SHARETYPE=msh_SHARETYPE_COPY)
ADD_DEFINITIONS(-DMSH_DEFAULT_MAX_SHARED_SEGMENTS=512)
ADD_DEFINITIONS(-DMSH_DEFAULT_MAX_SHARED_SIZE=4294967295)
ADD_DEFINITIONS(-DMSH_DEFAULT_SHARED_GC=TRUE)
ADD_DEFINITIONS(-DMSH_DEFAULT_LOCAL_GC=TRUE)
ADD_DEFINITIONS(-DMSH_DEFAULT_SECURITY=0600)
ADD_DEFINITIONS(-DMSH_DEFAULT_FETCH_DEFAULT="-r")
ADD_DEFINITIONS(-DMSH_DEFAULT_SYNC_DEFAULT=FALSE)
ADD_DEFINITIONS(-DMSH_USE_SSE2)
ADD_DEFINITIONS(-DMSH_USE_AVX)
ADD_DEFINITIONS(-DMSH_USE_AVX2)


FIND_PACKAGE(MatlabLibs REQUIRED)

IF(MATLAB_FOUND)
	MESSAGE(STATUS "MATLAB Found, MATLAB MEX will be compiled.")
	ADD_SUBDIRECTORY(src)
ELSE(MATLAB_FOUND)
	MESSAGE("MATLAB not found... nothing will be built.")
ENDIF(MATLAB_FOUND)
